# update-vcpkg-port

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  command.cpp  command.h  config.cpp  config.h  main.cpp  manifest.cpp  manifest.h  portfile.cpp  portfile.h  updater.cpp  updater.h  utils.cpp  utils.h
